# meridian2024-workshop

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  justfile  requirements.txt  sunbeam.conf
confs/: exercise1.conf  exercise2.conf  exercise3.conf  setup.conf
docs/source/: README.md  conf.py  exercises.rst  index.rst  installation.rst  troubleshooting.rst
solutions/: bugs-in-mutants.md  full_sunbeam.conf  solution_specs.rs
src/: lib.rs
src/certora/: spec.rs
src/certora/mutants/: mutant1.rs  mutant2.rs  mutant3.rs
