[package]
name = "certora-meridian24-token"
version = "0.0.0"
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "20.3.1" }
nondet = {git = "https://github.com/Certora/solana-cvt.git", branch="abakst/dev-soroban", default-features=false, features=["soroban"]}
cvt = {git = "https://github.com/Certora/solana-cvt.git", branch="abakst/dev-soroban"}


[dev-dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
